--- a/styles.css
+++ b/styles.css
@@ -187,3 +187,78 @@ section div img {
   text-decoration: underline;
   background-color: #e6e6e6;  
 }
+
+/*PRODUCT-LINKS*/
+.product-links {
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+}
+
+.product-links a {
+  margin-left: 3%;
+  margin-right: 3%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+  color: black;
+  font-weight: 500;
+}
+
+.product-links a:link, .product-links a:visited {
+  text-decoration: none;
+}
+
+.product-links a:hover, .product-links a:active {
+  text-decoration: underline;
+}
+
+.product-links a img {
+  height: 40px;
+  width: 40px;
+}
+
+/*FOOTER*/
+footer {
+  width: 100%;
+  height: 72px;
+  padding-left: 5%;
+  padding-right: 5%;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
+  background-color: #f2f2f2;
+}
+
+footer a:first-child{
+  display: flex;
+  flex-grow: 2;
+  align-items: center;
+}
+
+footer a:first-child i {
+  font-size: 20px;
+  margin-right: 2%;
+}
+
+footer a {
+  margin-left: 1%;
+  margin-right: 1%;
+
+  font-size: 11px;
+  color: #616161;
+}
+
+footer a:link, footer a:visited {
+  text-decoration: none;
+} 
+
+footer a:hover, footer a:active {
+  text-decoration: underline;
+  color: black;
+} 
